--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,62 @@
-td, th {
-	border: 1px solid;
-  }
-  
+/* Reset some default styling */
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
+/* Body styling */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f7f9fc;
+    color: #333;
+    line-height: 1.6;
+}
+
+/* Heading Styling */
+h1 {
+    text-align: center;
+    color: #333;
+    margin-top: 20px;
+}
+
+/* Table styling */
+#planets {
+    border-collapse: collapse;
+    width: 80%;
+    margin: 20px auto;
+    box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
+/* Table header styling */
+#planets th {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    text-align: left;
+}
+
+/* Table data styling */
+#planets td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+#planets img {
+    width: 50px;
+    height: auto;
+}
+
+/* Table row hover effect */
+#planets tr:hover {
+    background-color: #f0f0f0;
+}
+
+/* First column styling */
+#planets td:first-child {
+    font-weight: bold;
+}
+
+/* Alternate row color */
+#planets tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
